// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mount a component with a function attribute 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [],
      "nodeName": "BUTTON",
      "onclick": undefined,
      "textContent": "",
    },
  ],
  "nodeName": "DIV",
  "onclick": undefined,
  "textContent": "",
}
`;

exports[`mount a component with a nested component child 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [],
      "nodeName": "P",
      "onclick": undefined,
      "textContent": "foo",
    },
  ],
  "nodeName": "DIV",
  "onclick": undefined,
  "textContent": "foo",
}
`;

exports[`mount a component with a primitive attribute 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [
        Object {
          "name": "id",
          "value": "foo",
        },
      ],
      "children": Array [],
      "nodeName": "P",
      "onclick": undefined,
      "textContent": "",
    },
  ],
  "nodeName": "DIV",
  "onclick": undefined,
  "textContent": "",
}
`;

exports[`mount a component with a primitive attribute without quotes 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [
        Object {
          "name": "id",
          "value": "foo bar",
        },
      ],
      "children": Array [],
      "nodeName": "P",
      "onclick": undefined,
      "textContent": "",
    },
  ],
  "nodeName": "DIV",
  "onclick": undefined,
  "textContent": "",
}
`;

exports[`mount a component with a primitive child 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [],
      "nodeName": "B",
      "onclick": undefined,
      "textContent": "foo",
    },
  ],
  "nodeName": "DIV",
  "onclick": undefined,
  "textContent": "foo",
}
`;

exports[`mount a component with a sequence child 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [],
          "nodeName": "B",
          "onclick": undefined,
          "textContent": "foo",
        },
        Object {
          "attributes": Array [],
          "children": Array [],
          "nodeName": "B",
          "onclick": undefined,
          "textContent": "bar",
        },
      ],
      "nodeName": "P",
      "onclick": undefined,
      "textContent": "foobar",
    },
  ],
  "nodeName": "DIV",
  "onclick": undefined,
  "textContent": "foobar",
}
`;

exports[`mount a component with dummy text nodes 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [],
      "nodeName": "B",
      "onclick": undefined,
      "textContent": "foo
  ",
    },
  ],
  "nodeName": "DIV",
  "onclick": undefined,
  "textContent": "foo
  ",
}
`;

exports[`mount a component with mixed attributes 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [
        Object {
          "name": "id",
          "value": "foo",
        },
        Object {
          "name": "class",
          "value": "bar",
        },
      ],
      "children": Array [],
      "nodeName": "P",
      "onclick": undefined,
      "textContent": "",
    },
  ],
  "nodeName": "DIV",
  "onclick": undefined,
  "textContent": "",
}
`;

exports[`mount a simple component 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [],
      "nodeName": "P",
      "onclick": undefined,
      "textContent": "foo",
    },
  ],
  "nodeName": "DIV",
  "onclick": undefined,
  "textContent": "foo",
}
`;
